--- a/content/rotating_cuboid.html
+++ b/content/rotating_cuboid.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li class='has-children'><a href='w16.html'>w16</a><ul class='dropdown'><li><a href='Visualization_Stream.html'>Visualization_Stream</a><li><a href='rotating_cuboid.html'>rotating_cuboid</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li class='has-children'><a href='w16.html'>w16</a><ul class='dropdown'><li><a href='Visualization_Stream.html'>Visualization_Stream</a><li><a href='rotating_cuboid.html'>rotating_cuboid</a><li><a href='Online_Exam.html'>Online_Exam</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Visualization_Stream << <a href='Visualization_Stream.html'>Previous</a> <br /><h1>rotating_cuboid</h1>
+    <div id="tipue_search_content">Visualization_Stream << <a href='Visualization_Stream.html'>Previous</a> <a href='Online_Exam.html'>Next</a> >> Online_Exam<br /><h1>rotating_cuboid</h1>
 <p><span>遠端觀看</span><span>cuboid模擬</span></p>
 <p>如先前有操作<span>遠端控制uarm,因使用相同伺服器,需先結束伺服器的使用,才能操作。</span></p>
 <p>    (1)<span>用coppeliaSim開啟</span>rotating_cuboid內的rotating_cuboid.ttt</p>
@@ -149,7 +149,7 @@ img.add_border {
 <p>        如要觀看網頁版則<span>利用SciTE開啟rotating_cuboid.py執行,將會於</span></p>
 <p><span>         <a href="http://127.0.0.1:5000">http://127.0.0.1:5000</a>顯示攝影機視角之畫面,可點擊左下連結切換攝影機</span></p>
 <p><span></span>         <img caption="false" height="398" src="./../images/網頁方塊.png" width="500"/></p>
-<p></p><br />Visualization_Stream << <a href='Visualization_Stream.html'>Previous</a> </div>
+<br />Visualization_Stream << <a href='Visualization_Stream.html'>Previous</a> <a href='Online_Exam.html'>Next</a> >> Online_Exam</div>
         
     <!-- footer -->
       <div class="container">
