--- a/content/Visualization_Stream.html
+++ b/content/Visualization_Stream.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li class='has-children'><a href='w16.html'>w16</a><ul class='dropdown'><li><a href='Visualization_Stream.html'>Visualization_Stream</a><li><a href='rotating_cuboid.html'>rotating_cuboid</a><li><a href='Online_Exam.html'>Online_Exam</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li class='has-children'><a href='w16.html'>w16</a><ul class='dropdown'><li><a href='Visualization_Stream.html'>Visualization_Stream</a><li><a href='rotating_cuboid.html'>rotating_cuboid</a><li><a href='Online_Exam.html'>Online_Exam</a></li></ul><li><a href='期末考週.html'>期末考週</a></li>
                       </ul>
                 </nav>
               </div>
@@ -148,7 +148,8 @@ img.add_border {
 <p>       <img caption="false" height="198" src="./../images/uarm_co.png" width="400"/></p>
 <p><span>   (3)點擊To connect後將連結coppeliaSim模擬uarm的控制面板,使其可利用此程式進行</span></p>
 <p><span>       遠端操作。</span></p>
-<p><span></span>       <iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u3qdW_f9EA8" width="560"></iframe></p><br />w16 << <a href='w16.html'>Previous</a> <a href='rotating_cuboid.html'>Next</a> >> rotating_cuboid</div>
+<p><span></span>       <iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u3qdW_f9EA8" width="560"></iframe></p>
+<br />w16 << <a href='w16.html'>Previous</a> <a href='rotating_cuboid.html'>Next</a> >> rotating_cuboid</div>
         
     <!-- footer -->
       <div class="container">
